--- a/css/main.css
+++ b/css/main.css
@@ -113,9 +113,24 @@ html {
 body {
 	background-color: #252323;
 	margin: auto;
-	font-size: 0.875em;	
+	font-size: 0.875em;
 	height: 100%;
-	
+
+}
+
+#main-wrapper{
+  display: grid;
+  grid-template-columns: 5vw repeat(3, 30vw) 5vw;
+-ms-grid-columns: 5vw (30vw)[3] 5vw
+grid-template-rows: 20vh 70vh repeat(2, 50vh) 20vh;
+-ms-grid-rows: 20vh 70vh (50vh)[2] 20vh;
+grid-template-areas:
+  ". title title nav ."
+  ". header header sidebar"
+  ". news1 news2 news3 ."
+  ". news4 news5 news6 ."
+  ". footer footer footer .";
+}
 }
 
 a {
@@ -124,7 +139,7 @@ a {
      text-decoration: none;
 }
 
-img { 
+img {
 	width: 100%;
 	height: auto;
 	border-radius: 10px;
@@ -171,9 +186,9 @@ header, #header-wrapper {
 	background-color: #252323;
 }
 
-nav {	
+nav {
 	background-color: #252323;
-	margin: auto;	
+	margin: auto;
 }
 
 nav i {
@@ -196,7 +211,7 @@ header nav ul li a {
 
 .about-link {
 	height: 62px;
-	margin: auto;	
+	margin: auto;
 }
 
 .faq-link {
@@ -238,12 +253,12 @@ a.faq:link, a.faq:visited{
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
-	
+
 }
 
 .hero-img {
 	width: 100%;
-	margin: 10px 0;	
+	margin: 10px 0;
 }
 
 h3 {
@@ -326,33 +341,33 @@ h2 {
    margin-right: 20px;
 	margin-left: 5%;
    border: 1px solid #ccc;
-	
+
 }
 
 #team-img-jack {
 	background: #333 url(../img/team-jack.png) no-repeat center;
-	background-size: cover;	
+	background-size: cover;
 }
 
 #team-img-lana {
 	background: #333 url(../img/team-lana.png) no-repeat center;
-	background-size: cover;	
+	background-size: cover;
 }
 
 #team-img-willow {
 	background: #333 url(../img/team-willow.png) no-repeat center;
-	background-size: cover;	
+	background-size: cover;
 }
 
 
 .team-name {
 	font-size: 1.187em;
 	padding-top: 10px;
-	
+
 }
 
 .team-title {
-	font-size: 0.875em;	
+	font-size: 0.875em;
 	line-height: 1px;
 }
 
@@ -403,11 +418,11 @@ h2 {
 	padding: 10px 0 20px 0;
 	text-transform: uppercase;
   	transition-delay: 0.1s;
-	
+
 }
 
-.btn:hover {opacity: 0.5} 
-.btn2:hover {opacity: 0.5} 
+.btn:hover {opacity: 0.5}
+.btn2:hover {opacity: 0.5}
 .btn3:hover {opacity: 0.5}
 
 .btn {
@@ -423,12 +438,12 @@ form {
 .sidebar-about {
 	 display: none;
 	/**** display:none; hides content and space occupied ******/
-	
+
 }
 
 .sidebar-faqs {
 	 display: none;
-	
+
 }
 
 /* ==============
@@ -438,12 +453,12 @@ form {
 .feed-p {
 	display: none;
 }
- 
+
 .feed-1,
-.feed-2, 
-.feed-3, 
-.feed-4, 
-.feed-5, 
+.feed-2,
+.feed-3,
+.feed-4,
+.feed-5,
 .feed-6 {
 	width: 95%;
 	height: 100%;
@@ -466,8 +481,8 @@ form {
 
 .feed-img, .feed-img-6{
 	margin: auto;
-	
-	
+
+
 }
 
 .feed-img-6 {
@@ -495,7 +510,7 @@ footer {
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
-	
+
 }
 
 .footer-img {
@@ -604,15 +619,15 @@ footer {
 	TABLET
 	==========*/
 @media all and (min-width:768px){
-	
+
 	html {
     	font-size:14px;
 	}
 
 	body {
-		font-size: 1em;	
+		font-size: 1em;
 	}
-	
+
 	header {
 		width: 100%;
 	}
@@ -628,7 +643,7 @@ footer {
 		max-width: 330px;
 		padding: 0 0 0 2.3%;
 	}
-	
+
 	nav ul {
 		float: right;
 		padding: 20px 80px 0 0;
@@ -637,93 +652,93 @@ footer {
 	nav ul li {
 		display: inline-block;
 		padding-left: 20px;
-		
+
 	}
-	
+
 	.about-link, .faq-link {
 		border: none;
 	}
-	
+
 	.hero-area{
 		max-height: 100%;
 		width: 96%;
 		padding: 2%;
-	
+
 }
-	
-	
-	
+
+
+
 	 .hero-img {
 		width: 57%;
 		padding-right: 6%;
 		max-width: 456px;
 		float: left;
 	}
-	
+
 	.top-story {
 		width: 100%;
 		float: left;
 		border: none;
 		padding-bottom: 5%;
 	}
-	
-	
+
+
 	#sidebar {
 		clear: both;
 		float: right;
 		width: 36%;
 	}
-	
+
 	.news{
 		width: 100%;
 		height: 500px;
 	}
-	
-	.feed-1, 
-	.feed-2, 
-	.feed-3, 
-	.feed-4, 
-	.feed-5, 
+
+	.feed-1,
+	.feed-2,
+	.feed-3,
+	.feed-4,
+	.feed-5,
 	.feed-6 {
 		width: 57%;
 		border-bottom: #cfcacb 1px solid;
 		padding-left: 1%;
 	}
-	
+
 	.feed-img {
 		width: 35%;
 	}
-	
-	
+
+
 	.arcade-fire {
 		display: inherit;
 	}
-	
+
 	.sidebar-about,
 	.sidebar-faqs{
 		display:inherit;
 	}
-	
+
 	.feed-6 {
 		border: none;
 	}
-	
+
 	.btn2, .btn3 {
 		width: 100%;
 		height: 37px;
-		background: #350f22;	
+		background: #350f22;
 	}
-	
+
 	footer {
 		border-top: #cfcacb 1px solid;
 		background: none;
 	}
-	
+
 	.footer-img {
 		padding-top: 2%;
 		max-width: 200px;
 	}
-	
+
 	/* ===============
 	 ABOUT PAGE TABLET
 	================*/
@@ -742,14 +757,14 @@ footer {
 	.brooklyn {
 		padding-left: 80px;
 	}
-		
+
 		.map  {
 		position: relative;
 		padding-bottom: 30%;
 		height: 0;
 		overflow: hidden;
 	}
-	
+
 	.map iframe {
 	position: absolute;
 	top:10%;
@@ -763,8 +778,8 @@ footer {
 		border-top: #cfcacb 1px solid;
 		border-bottom: #cfcacb 1px solid;
 		padding-bottom: 25px;
-	}	
-	
+	}
+
 	.team-img {
 		width: 30%;
 		padding-bottom: 30%;
@@ -775,7 +790,7 @@ footer {
 	}
 
 	#team {
-		border-bottom: none;	
+		border-bottom: none;
 	}
 
 
@@ -788,7 +803,7 @@ footer {
 	#faqs-page {
 		border-bottom: none;
 	}
-	
+
 	.faq-1, .faq-2, .faq-3 {
 		border-bottom: #cfcacb 1px solid;
 		padding-bottom: 30px;
@@ -806,31 +821,31 @@ footer {
 }
 
 @media all and (min-width:940px) {
-	
+
 	.top-story h1 {
 		font-size: 3.25em;
 		line-height: 35px;
 		line-height: 50px;
 	}
-	
+
 	h2 {
 		font-size: 1.875em;
 	}
-	
+
 	h3 {
 		font-size:  1.312em;
-		
+
 	}
-	
+
 	h4 {
 		font-size: 0.75em;
 		font-weight: 700;
 	}
-	
+
 	p {
 		font-size: 1em;
 	}
-	
+
 	.hero-area{
 		width: 96%;
 		padding: 2%;
@@ -848,13 +863,13 @@ footer {
 		display: -ms-flexbox;
 		display: -webkit-flex;
 	}
-	
+
 	 .hero-img {
 		width: 100%;
 		padding-right: 5%;
 		max-width: 630px;
 	}
-	
+
 	.top-story {
 		width: 65%;
 		border: none;
@@ -862,24 +877,24 @@ footer {
 		padding-right: 3%;
 		float:left;
 	}
-	
+
 	.top-story {}
-	
+
 	.top-info {
 		float: left;
 	}
-	
-	
+
+
 	#sidebar {
 		width: 20%;
 		clear: none;
 	}
-	
+
 	#sidebar h2 {
 		font-size: 1.5em;
 		color: #fff;
 	}
-	
+
 	.news{
 		width: 100%;
 		height: 100%;
@@ -893,19 +908,19 @@ footer {
 		display: -ms-flexbox;
 		display: -webkit-flex;
 	}
-	
+
 	.news h3 {
 		height: 75px;
 		font-size: 1.1em;
 		color: #fff;
 		text-align: center;
-	
+
 	}
-	
+
 	.news p {
 		display: none;
 	}
-	
+
 	.recent-news {
 		clear: both;
 		width: 100%;
@@ -914,13 +929,13 @@ footer {
 		display: flex;
 		justify-content: center;
 		margin-top: 20px;
-		
+
 	}
-	.feed-1, 
-	.feed-2, 
-	.feed-3, 
-	.feed-4, 
-	.feed-5, 
+	.feed-1,
+	.feed-2,
+	.feed-3,
+	.feed-4,
+	.feed-5,
 	.feed-6 {
 	display: flex;
 	justify-content:center;
@@ -933,47 +948,47 @@ footer {
     width: 300px;
     height: 300px;
 	margin-top: 50px;
-		
+
 	}
-	
-	
+
+
 	.feed-img {
 		width: 100%;
-		
+
 	}
-	
-	
+
+
 	.arcade-fire {
 		display: inherit;
 	}
-	
+
 	.feed-p {
 		display: inherit;
 	}
-	
+
 	.sidebar-about,
 	.sidebar-faqs{
 		display:inherit;
 	}
-	
+
 	.feed-6 {
 		border: none;
 	}
-	
+
 	.btn, .btn2, .btn3 {
 		width: 80%;
 		height: 35px;
 		padding: 10px 0 20px 0;
 		border: none;
 	}
-	
+
 	.sign-up{
 	width: 90%;
 	height: 35px;
 	border: none;
 	align-content: center;
 	}
-	
+
 	form {
 		border: none;
 		align-content: center;
@@ -994,12 +1009,12 @@ footer {
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	}
-	
+
 	.footer-img {
 		padding-top: 2%;
 		max-width: 200px;
 	}
-	
+
 	/* ===============
 	 ABOUT PAGE DESKTOP
 	================*/
@@ -1009,7 +1024,7 @@ footer {
 		padding-bottom: 190px;
 		float: left;
 	}
-	
+
 	.contact-us h2 {
 		font-size: 1.875em;
 	}
@@ -1023,7 +1038,7 @@ footer {
 	.brooklyn {
 		padding-left: 80px;
 	}
-		
+
 	.map  {
 		position: relative;
 		padding-bottom: 35%;
@@ -1031,7 +1046,7 @@ footer {
 		overflow: hidden;
 		right: 10%;
 	}
-	
+
 	.map iframe {
 		position: absolute;
 		top:10%;
@@ -1048,12 +1063,12 @@ footer {
 		padding-bottom: 25px;
 		margin-top: 30px;
 	}
-	
-	.mission-statement h2, 
+
+	.mission-statement h2,
 	#team h3  {
 		font-size: 1.875em;
 	}
-	
+
 	.mission-statement p {
 		font-size: 1em;
 	}
@@ -1061,16 +1076,16 @@ footer {
 	#team h4 {
 		font-size: 1.312em;
 	}
-	
+
 	#team h5 {
 		font-size: 1em;
 		font-weight: lighter;
 	}
 
 	#team {
-		border-bottom: none;	
+		border-bottom: none;
 	}
-	
+
 	.team-1, .team-2, .team-3 {
 		height: 120px;
 		padding-bottom: 90px;
@@ -1084,7 +1099,7 @@ footer {
 		margin-left: 2%;
 		border: 1px solid #ccc;
 	}
-	
+
 	.team-description {
 		display: inherit;
 	}
@@ -1098,9 +1113,9 @@ footer {
 	#faqs-page {
 		border-bottom: none;
 	}
-	
+
 	.faq-1,
-	.faq-2, 
+	.faq-2,
 	.faq-3 {
 		border-bottom: #cfcacb 1px solid;
 		padding-bottom: 30px;
@@ -1114,11 +1129,11 @@ footer {
 		font-size: 1.5em;
 		font-weight: lighter;
 	}
-	
+
 	#faqs-page p {
 		font-size: 1.167em;
 	}
-	
+
 }
 
 /* ==========================================================================
